# YCPA_backend

./: .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  package-lock.json  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 415cf7ae567a_add_subscription_plans_table.py  6932b65028bb_add_password_hash_to_users.py  de506a759552_initial_2.py  de59b09524e0_initial.py
scripts/: run_ingest.py  seed_roles.py
tests/: Readme.md  conftest.py
tests/integration/: test_health.py
tests/unit/: test_exceptions.py
tests/unit/services/: test_base_service.py
ycpa/: main.py
ycpa/api/dependencies/: rbac.py
ycpa/api/v1/: router.py
ycpa/api/v1/endpoints/: __init__.py  aim.py  auth.py  billing.py  cde.py  cognito.py  dashboard.py  health.py  invitation.py  pim.py  project_members.py  qto.py  rbac.py  upload.py  users.py
ycpa/core/: audit.py  email.py  error_handlers.py  exceptions.py  lifespan.py
ycpa/core/auth/: dependencies.py  jwt_verifier.py
ycpa/core/cache/: redis.py
ycpa/core/config/: __init__.py  base.py  environments.py  settings.py
ycpa/core/database/: __init__.py  context.py  dependencies.py  engine.py  engine_sync.py  neo4j.py  qdrant.py  session.py  transaction.py
ycpa/core/exceptions/: __init__.py  base.py  business.py  http_4xx.py  http_5xx.py
ycpa/core/logger/: __init__.py  logging_config.py  structured_logging.py  visual_logger.py
ycpa/core/queue/: worker.py
ycpa/core/schemas/: errors.py  responses.py
ycpa/core/storage/: s3.py
ycpa/core/tasks/: base.py
ycpa/core/tracing/: otel.py
ycpa/middleware/: correlation_middleware.py  csrf.py  idempotency_middleware.py  logging_middleware.py  performance_middleware.py  registry.py  security_middleware.py
ycpa/models/: __init__.py  audit.py  cde.py  ifc.py  invitation.py  rbac.py  roles.py  storage_usage.py  subscription.py  user.py  workspace.py
ycpa/repositories/: aim.py  base.py  cde.py  invitation.py  pim.py  rbac.py
ycpa/repositories/auth/: users.py
ycpa/schemas/requests/: aim.py  auth.py  billing.py  cde.py  invitation.py  pim.py  project_members.py  qto.py
ycpa/schemas/responses/: aim.py  auth.py  billing.py  cde.py  invitation.py  pim.py  project_members.py  qto.py
ycpa/seeders/: seed_rbac.py  seed_subscription_plans.py
ycpa/services/: aim.py  auth.py  base.py  billing.py  cde.py  invitation.py  pim.py  project_members.py  qto.py  rbac.py  workspace_roles.py
ycpa/utils/: test_db.py
