[project]
name = "ycpa"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "boto3>=1.40.46",
    "botocore>=1.40.61",
    "cryptography>=46.0.3",
    "email-validator>=2.1.0.post1",
    "fastapi[standard]>=0.114.2,<1.0.0",
    "fastapi-mail>=1.6.2",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi-users-db-sqlalchemy[asyncio]>=7.0.0",
    "google-adk>=1.20.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=24.1.1",
    "httpx>=0.25.1",
    "ifc4d>=0.8.4",
    "ifc5d>=0.8.4",
    "ifcopenshell>=0.8.5",
    "neo4j>=6.1.0",
    "openpyxl>=3.1.5",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=0.23.8",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.7",
    "qdrant-client>=1.17.1",
    "razorpay>=2.0.1",
    "rich>=14.3.3",
    "sentry-sdk[fastapi]>=1.40.6",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.48",
    "starlette>=0.46.2",
    "typing-extensions>=4.15.0",
]
[tool.hatch.build.targets.wheel]
packages = ["ycpa"]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov>=7.0.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["ycpa"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
